cleaning up the APM wrapper based on info from: http://blog.stephencleary.com/2012/07/async-interop-with-iasyncresult.html

--- a/src/System.Web.Mvc/System.Web.Mvc.csproj
+++ b/src/System.Web.Mvc/System.Web.Mvc.csproj
@@ -610,6 +610,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Async\SynchronizationContextSwitcher.cs" />
     <None Include="JavaScript\jquery.unobtrusive-ajax.js" />
     <None Include="JavaScript\jquery.validate.unobtrusive.js" />
     <None Include="packages.config" />
